src/pages/textAnimation.css
/* textAnimation.css */
.elementor-headline-dynamic-wrapper {
  display: inline-block;
  position: relative;
  text-align: left;
}

.custom-scrollbar::-webkit-scrollbar {
  width: 4px;
}
.custom-scrollbar::-webkit-scrollbar-track {
  background: #f1f1f1;
  border-radius: 10px;
}
.custom-scrollbar::-webkit-scrollbar-thumb {
  background: #d1d5db;
  border-radius: 10px;
}
.custom-scrollbar::-webkit-scrollbar-thumb:hover {
  background: #9ca3af;
}

.custom-scrollbar::-webkit-scrollbar {
  width: 4px;
}
.custom-scrollbar::-webkit-scrollbar-track {
  background: #f1f1f1;
  border-radius: 10px;
}
.custom-scrollbar::-webkit-scrollbar-thumb {
  background: #d1d5db;
  border-radius: 10px;
}
.custom-scrollbar::-webkit-scrollbar-thumb:hover {
  background: #9ca3af;
}


/* code */

.custom-scrollbar-code::-webkit-scrollbar {
  width: 4px;
}
.custom-scrollbar-code::-webkit-scrollbar-track {
  background: #f1f1f1;
  border-radius: 10px;
}
.custom-scrollbar-code::-webkit-scrollbar-thumb {
  background: #3b82f6;
  border-radius: 10px;
}
.custom-scrollbar-code::-webkit-scrollbar-thumb:hover {
  background: #2563eb;
}

.custom-scrollbar-code::-webkit-scrollbar {
  width: 8px;
}
.custom-scrollbar-code::-webkit-scrollbar-track {
  background: #f1f1f1;
  border-radius: 10px;
}
.custom-scrollbar-code::-webkit-scrollbar-thumb {
  background: #3b82f6;
  border-radius: 10px;
}
.custom-scrollbar-code::-webkit-scrollbar-thumb:hover {
  background: #2563eb;
}





.elementor-headline-dynamic-letter {
  display: inline-block;
  position: relative;
  -webkit-transition: all 0.45s cubic-bezier(0.55, 0.055, 0.675, 0.19);
  transition: all 0.45s cubic-bezier(0.55, 0.055, 0.675, 0.19);
  -webkit-transform: rotateY(0deg);
  transform: rotateY(0deg);
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.elementor-headline-dynamic-letter.elementor-headline-animation-in {
  -webkit-animation: elementor-headline-swirl-in 0.4s forwards;
  animation: elementor-headline-swirl-in 0.4s forwards;
}

.elementor-headline-dynamic-letter.elementor-headline-animation-out {
  -webkit-animation: elementor-headline-swirl-out 0.4s forwards;
  animation: elementor-headline-swirl-out 0.4s forwards;
}

@-webkit-keyframes elementor-headline-swirl-in {
  0% {
    opacity: 0;
    -webkit-transform: translateZ(-20px) rotateY(90deg);
    transform: translateZ(-20px) rotateY(90deg);
  }
  60% {
    opacity: 1;
    -webkit-transform: translateZ(-20px) rotateY(-10deg);
    transform: translateZ(-20px) rotateY(-10deg);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateZ(0) rotateY(0deg);
    transform: translateZ(0) rotateY(0deg);
  }
}

@keyframes elementor-headline-swirl-in {
  0% {
    opacity: 0;
    -webkit-transform: translateZ(-20px) rotateY(90deg);
    transform: translateZ(-20px) rotateY(90deg);
  }
  60% {
    opacity: 1;
    -webkit-transform: translateZ(-20px) rotateY(-10deg);
    transform: translateZ(-20px) rotateY(-10deg);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateZ(0) rotateY(0deg);
    transform: translateZ(0) rotateY(0deg);
  }
}

@-webkit-keyframes elementor-headline-swirl-out {
  0% {
    opacity: 1;
    -webkit-transform: translateZ(0) rotateY(0);
    transform: translateZ(0) rotateY(0);
  }
  60% {
    opacity: 0;
    -webkit-transform: translateZ(-20px) rotateY(100deg);
    transform: translateZ(-20px) rotateY(100deg);
  }
  100% {
    opacity: 0;
    -webkit-transform: translateZ(-20px) rotateY(90deg);
    transform: translateZ(-20px) rotateY(90deg);
  }
}

@keyframes elementor-headline-swirl-out {
  0% {
    opacity: 1;
    -webkit-transform: translateZ(0) rotateY(0);
    transform: translateZ(0) rotateY(0);
  }
  60% {
    opacity: 0;
    -webkit-transform: translateZ(-20px) rotateY(100deg);
    transform: translateZ(-20px) rotateY(100deg);
  }
  100% {
    opacity: 0;
    -webkit-transform: translateZ(-20px) rotateY(90deg);
    transform: translateZ(-20px) rotateY(90deg);
  }
}

